# BoidSimulation

./: Boid.cpp  Boid.h  CMakeLists.txt  GUI.h  LICENSE  README.md  Rules.cpp  Rules.h  app.rc  application.cpp  application.h  boid_simulator.cpp  boid_simulator.h  im_framerate_graph.h  im_sketch.h  logger.h  main.cpp  utility.h  vector2.h
utility/: ImMoonlight.h  Logger.h  Math.h
